--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-   "name": "new-typeorm-project",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "ts-node": "3.3.0",
-      "@types/node": "^8.0.29",
-      "typescript": "3.3.3333"
-   },
-   "dependencies": {
-      "typeorm": "0.2.37",
-      "reflect-metadata": "^0.1.10",
-      "pg": "^8.4.0"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts"
-   }
+  "name": "new-typeorm-project",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "devDependencies": {
+    "@types/node": "^16.6.1",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "i": "^0.3.6",
+    "npm": "^7.20.6",
+    "pg": "^8.4.0",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.37"
+  },
+  "scripts": {
+    "start": "ts-node src/server.ts"
+  }
 }
