--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.4.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.6.1",
     "morgan": "^1.10.0",
@@ -15,8 +18,11 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.12",
     "npm": "^7.20.6",
     "pg": "^8.4.0",
