--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-validator": "^0.13.1",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
+    "env": "^0.0.2",
     "express": "^4.17.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
