--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,10 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.17",
+    "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7"
   }
 }
