--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.17",
     "autoprefixer": "^10.3.1",
     "eslint": "7.32.0",
