--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "npm": "^7.20.6",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.10",
-    "typeorm": "0.2.37"
+    "typeorm": "0.2.37",
+    "typeorm-seeding": "^1.6.1"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
     "server": "nodemon --exec ts-node src/server.ts",
     "web": "cd web && npm run dev",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-    "dev": "concurrently \"npm run server\" \"npm run web\" --names server,web"
+    "dev": "concurrently \"npm run server\" \"npm run web\" --names server,web",
+    "seed": "ts-node ./node_modules/typeorm-seeding/dist/cli.js seed"
   }
 }
