--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.6.1",
     "concurrently": "^6.2.1",
     "morgan": "^1.10.0",
@@ -27,6 +28,7 @@
     "express": "^4.17.1",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "npm": "^7.20.6",
     "pg": "^8.4.0",
